@@ -1,5 +1,7 @@
 Release 2.2.1 - 12/19/2021
 
+   * Fix multithreading bug for ooxml files (TIKA-3627).
+
    * Upgrade log4j to 2.17.0 (TIKA-3625).
 
    * Upgrade to PDFBox 2.0.25 (TIKA-3622)
